make arrows generally less visually invasive by lowering their contrast somewhat. Fixes #4451
git-svn-id: http://svn.dojotoolkit.org/src/dijit/trunk@10503 560b804f-0ae3-0310-86f3-f6aa0a117693

--- a/themes/tundra/tundra.css
+++ b/themes/tundra/tundra.css
@@ -37,6 +37,13 @@
 	position:relative; 
 }
 
+.tundra .dijitA11yDownArrow,
+.tundra .dijitDownArrowButton,
+.tundra .dijitUpArrowButton {
+	font-size: 0.75em;
+	color: #848484;
+}
+
 
 .tundra .dijitButtonDisabled .dijitButtonNode,
 .tundra .dijitToggleButtonDisabled .dijitButtonNode,
